style: fix white spaces in app

--- a/src/renderer/styles/css/components.css
+++ b/src/renderer/styles/css/components.css
@@ -1,3 +1,4 @@
+
 #blink {
     animation: 2s blink ease infinite;
 }
@@ -11,15 +12,33 @@
     }
   }
 
+#app-container {
+  width: 100vw;
+  height: 100vh; 
+}
+
+#header-container {
+  padding-top: 2px;
+  height: 44px;
+  background-color: rgb(58, 58, 58)
+}
+
+#main-container {
+  display: flex;
+}
+
+
 #sidebar {
-  height: 100vh;
+  height: 95vh;
   background-color: #353a40;
+  padding: 1em 2%;
   flex: 2;
 }
 #main-window {
-  height: 100vh;
+  height: 95vh;
   background-color: #41464a;
   flex: 7;
+  padding: 2em 5%;
   overflow-y: scroll;
 }
 
